add news fragment and login navigation

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -10,4 +10,7 @@
         android:title="Реєстрація"
         app:showAsAction="never" />
 
+    <item android:id="@+id/login"
+        android:title="Логін"
+        app:showAsAction="never" />
 </menu>
