Show list users

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -13,4 +13,8 @@
     <item android:id="@+id/login"
         android:title="Логін"
         app:showAsAction="never" />
+
+    <item android:id="@+id/users"
+        android:title="Користувачі"
+        app:showAsAction="never" />
 </menu>
