Set jwt and login good

--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -16,30 +16,41 @@
         android:paddingTop="16dp">
 
         <ImageView
+            android:id="@+id/login_image_logo"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="48dp"
             android:layout_marginBottom="16dp"
+            android:contentDescription="@string/logo_image_desc"
             android:src="@drawable/news_icon" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="132dp"
+            android:layout_marginBottom="90dp"
             android:text="@string/app_name"
             android:textAllCaps="true"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/invalid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/colorRed"
+            android:textSize="16sp" />
+
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/username_text_input"
+            android:id="@+id/userlogin_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/hint_username">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/user_edit_text"
+                android:id="@+id/userlogin_edit_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
