Add activity base and 401

--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -17,4 +17,8 @@
     <item android:id="@+id/users"
         android:title="Користувачі"
         app:showAsAction="never" />
+
+    <item android:id="@+id/logout"
+        android:title="Вихід"
+        app:showAsAction="never" />
 </menu>
