--- a/app/src/main/res/layout/fragment_product_create.xml
+++ b/app/src/main/res/layout/fragment_product_create.xml
@@ -43,6 +43,13 @@
             android:layout_marginBottom="10dp"
             android:textColor="@color/colorRed"
             android:textSize="16sp" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnSelectImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:text="Додати" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/userlogin_text_input"
