Add error massage create product

--- a/app/src/main/res/layout/fragment_product_create.xml
+++ b/app/src/main/res/layout/fragment_product_create.xml
@@ -38,7 +38,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/userlogin_text_input"
+            android:id="@+id/product_title_input_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Назва">
@@ -52,7 +52,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/password_text_input"
+            android:id="@+id/price_text_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
@@ -63,7 +63,7 @@
                 android:id="@+id/product_price_editor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="text" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <RelativeLayout
