--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,12 +36,31 @@ android:background="@color/profileBackground">
             android:id="@+id/linearLayout"
             android:background="@drawable/profile_bk">
 
-            <ImageView
+<!--            <ImageView-->
+<!--                android:id="@+id/userPhoto"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:src="@drawable/profile_round" />-->
+
+<!--            <com.android.volley.toolbox.NetworkImageView-->
+<!--                android:id="@+id/userPhoto"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"/>-->
+<!--                android:background="?attr/colorPrimaryDark"-->
+<!--                android:scaleType="centerCrop" />-->
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/profile_round" />
+                app:cardElevation="0dp"
+                app:cardCornerRadius="80dp">
+                <com.android.volley.toolbox.NetworkImageView
+                    android:id="@+id/userPhoto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/userName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="\@appsnippuser"
@@ -49,6 +68,7 @@ android:background="@color/profileBackground">
                 android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/userEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="developer@appsnipp.com"
@@ -70,7 +90,9 @@ android:background="@color/profileBackground">
                     android:background="@drawable/profile_bk"/>
 
                 <TextView
+                    android:id="@+id/btnBack"
                     android:text="Back to\nHome"
+                    android:clickable="true"
                     style="@style/profileStyledBackButton" />
             </RelativeLayout>
 
