--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -34,6 +34,7 @@ tools:showIn="@layout/activity_home">
             style="@style/profileDetailsTextMain" />
 
         <TextView
+            android:id="@+id/userContentName"
             android:text="developer"
             android:layout_toRightOf="@id/nameImageView"
             style="@style/profileDetailsMiniText" />
@@ -53,6 +54,7 @@ tools:showIn="@layout/activity_home">
             style="@style/profileDetailsTextMain"/>
 
         <TextView
+            android:id="@+id/userPhone"
             android:text="+91-8129999999"
             android:layout_toRightOf="@id/mobileImageView"
             style="@style/profileDetailsMiniText" />
@@ -72,6 +74,7 @@ tools:showIn="@layout/activity_home">
             style="@style/profileDetailsTextMain" />
 
         <TextView
+            android:id="@+id/userContentEmail"
             android:text="developer@appsnipp.com"
             android:layout_toRightOf="@id/emailImageView"
             style="@style/profileDetailsMiniText" />
