--- a/app/src/main/res/layout/content_profile.xml
+++ b/app/src/main/res/layout/content_profile.xml
@@ -1,126 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-app:layout_behavior="@string/appbar_scrolling_view_behavior"
-tools:context=".user.HomeActivity"
-tools:showIn="@layout/activity_home">
-
-<LinearLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_marginTop="20dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginRight="20dp">
+    android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".user.HomeActivity"
+    tools:showIn="@layout/activity_home">
 
-    <TextView
-        style="@style/headerText"
-        android:text="Account Info"
-        android:layout_marginBottom="20dp"/>
-
-    <RelativeLayout style="@style/profileDetailsLayout">
-        <ImageView
-            android:id="@+id/nameImageView"
-            android:src="@drawable/ic_name"
-            style="@style/profileDetailsImage" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:orientation="vertical">
 
         <TextView
-            android:id="@+id/nameTextView"
-            android:text="Name"
-            android:layout_toRightOf="@id/nameImageView"
-            style="@style/profileDetailsTextMain" />
+            style="@style/headerText"
+            android:layout_marginBottom="20dp"
+            android:text="Account Info" />
 
-        <TextView
-            android:id="@+id/userContentName"
-            android:text="developer"
-            android:layout_toRightOf="@id/nameImageView"
-            style="@style/profileDetailsMiniText" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btnEdit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:insetLeft="0dp"
+            android:insetTop="0dp"
+            android:insetRight="0dp"
+            android:insetBottom="0dp"
+            android:minWidth="0dp"
+            android:text="Edit"
+            app:icon="@drawable/ic_edit_black_24dp"
+            app:iconGravity="textStart"
+            tools:ignore="PrivateResource" />
 
-    </RelativeLayout>
+        <RelativeLayout style="@style/profileDetailsLayout">
 
-    <View style="@style/proifleDetailsView" />
-    <RelativeLayout style="@style/profileDetailsLayout">
-        <ImageView
-            android:id="@+id/mobileImageView"
-            android:src="@drawable/ic_mobile"
-            style="@style/profileDetailsImage" />
+            <ImageView
+                android:id="@+id/nameImageView"
+                style="@style/profileDetailsImage"
+                android:src="@drawable/ic_name" />
 
-        <TextView
-            android:text="Mobile"
-            android:layout_toRightOf="@id/mobileImageView"
-            style="@style/profileDetailsTextMain"/>
+            <TextView
+                android:id="@+id/nameTextView"
+                style="@style/profileDetailsTextMain"
+                android:layout_toRightOf="@id/nameImageView"
+                android:text="Name" />
 
-        <TextView
-            android:id="@+id/userPhone"
-            android:text="+91-8129999999"
-            android:layout_toRightOf="@id/mobileImageView"
-            style="@style/profileDetailsMiniText" />
+            <TextView
+                android:id="@+id/userContentName"
+                style="@style/profileDetailsMiniText"
+                android:layout_toRightOf="@id/nameImageView"
+                android:text="developer" />
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-    <View style="@style/proifleDetailsView" />
-    <RelativeLayout style="@style/profileDetailsLayout">
-        <ImageView
-            android:id="@+id/emailImageView"
-            android:src="@drawable/ic_email"
-            style="@style/profileDetailsImage" />
+        <View style="@style/proifleDetailsView" />
 
-        <TextView
-            android:text="Email"
-            android:layout_toRightOf="@id/emailImageView"
-            style="@style/profileDetailsTextMain" />
+        <RelativeLayout style="@style/profileDetailsLayout">
 
-        <TextView
-            android:id="@+id/userContentEmail"
-            android:text="developer@appsnipp.com"
-            android:layout_toRightOf="@id/emailImageView"
-            style="@style/profileDetailsMiniText" />
+            <ImageView
+                android:id="@+id/mobileImageView"
+                style="@style/profileDetailsImage"
+                android:src="@drawable/ic_mobile" />
 
-    </RelativeLayout>
+            <TextView
+                style="@style/profileDetailsTextMain"
+                android:layout_toRightOf="@id/mobileImageView"
+                android:text="Mobile" />
 
-    <View style="@style/proifleDetailsView" />
-    <RelativeLayout style="@style/profileDetailsLayout">
-        <ImageView
-            android:id="@+id/addressImageView"
-            android:src="@drawable/ic_address"
-            style="@style/profileDetailsImage" />
+            <TextView
+                android:id="@+id/userPhone"
+                style="@style/profileDetailsMiniText"
+                android:layout_toRightOf="@id/mobileImageView"
+                android:text="+91-8129999999" />
 
-        <TextView
-            android:text="Address"
-            android:layout_toRightOf="@id/addressImageView"
-            style="@style/profileDetailsTextMain" />
+        </RelativeLayout>
 
-        <TextView
-            android:text="Avenue 2nd Street NW SY."
-            android:layout_toRightOf="@id/addressImageView"
-            style="@style/profileDetailsMiniText" />
+        <View style="@style/proifleDetailsView" />
 
-    </RelativeLayout>
+        <RelativeLayout style="@style/profileDetailsLayout">
 
-    <View style="@style/proifleDetailsView" />
-    <RelativeLayout style="@style/profileDetailsLayout">
-        <ImageView
-            android:id="@+id/dobImageView"
-            android:src="@drawable/ic_dob"
-            style="@style/profileDetailsImage" />
+            <ImageView
+                android:id="@+id/emailImageView"
+                style="@style/profileDetailsImage"
+                android:src="@drawable/ic_email" />
 
-        <TextView
-            android:text="D.O.B"
-            android:layout_toRightOf="@id/dobImageView"
-            style="@style/profileDetailsTextMain" />
+            <TextView
+                style="@style/profileDetailsTextMain"
+                android:layout_toRightOf="@id/emailImageView"
+                android:text="Email" />
 
-        <TextView
-            android:text="12-05-1990"
-            android:layout_toRightOf="@id/dobImageView"
-            style="@style/profileDetailsMiniText" />
+            <TextView
+                android:id="@+id/userContentEmail"
+                style="@style/profileDetailsMiniText"
+                android:layout_toRightOf="@id/emailImageView"
+                android:text="developer@appsnipp.com" />
 
-    </RelativeLayout>
+        </RelativeLayout>
 
-    <View style="@style/proifleDetailsView" />
+        <View style="@style/proifleDetailsView" />
 
-</LinearLayout>
+        <RelativeLayout style="@style/profileDetailsLayout">
+
+            <ImageView
+                android:id="@+id/addressImageView"
+                style="@style/profileDetailsImage"
+                android:src="@drawable/ic_address" />
+
+            <TextView
+                style="@style/profileDetailsTextMain"
+                android:layout_toRightOf="@id/addressImageView"
+                android:text="Address" />
+
+            <TextView
+                android:id="@+id/userContentAddress"
+                style="@style/profileDetailsMiniText"
+                android:layout_toRightOf="@id/addressImageView" />
+
+        </RelativeLayout>
+
+        <View style="@style/proifleDetailsView" />
+
+        <RelativeLayout style="@style/profileDetailsLayout">
+
+            <ImageView
+                android:id="@+id/dobImageView"
+                style="@style/profileDetailsImage"
+                android:src="@drawable/ic_dob" />
+
+            <TextView
+                style="@style/profileDetailsTextMain"
+                android:layout_toRightOf="@id/dobImageView"
+                android:text="D.O.B" />
+
+            <TextView
+                android:id="@+id/userContentBirthDate"
+                style="@style/profileDetailsMiniText"
+                android:layout_toRightOf="@id/dobImageView" />
+
+
+        </RelativeLayout>
+
+        <View style="@style/proifleDetailsView" />
+
+    </LinearLayout>
 
 </androidx.core.widget.NestedScrollView>
